(coq.theory
 (name iris.staging)
 (package coq-iris-staging)
 (theories iris iris.heap_lang)
 (flags 
  ; We sometimes want to locally override notation, and there is no good way to do that with scopes.
  -w -notation-overridden
  ; Cannot use non-canonical projections as it causes massive unification failures
  ; (https://github.com/coq/coq/issues/6294).
  -w -redundant-canonical-projection
  ; Fixing this one requires Coq 8.15.
  -w -deprecated-typeclasses-transparency-without-locality))

(include_subdirs qualified)
